2011-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Change various prefs label to /warn/ the user to read the manual.


2011-09-15  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.c:
   Ask the user to configure a valid browser command if spawning it
   fails rather than falling back to some arbitrary hardcoded defaults.


2011-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/win32.c:
   Fix uninitialized font size & other fields.
   Remove unhooked font dialog apply button.


2011-09-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetype_extensions.conf:
   Add Markdown extensions from Shared MIME-Info database (closes
   #3405321).
 * src/filetypes.c:
   Add missing MIME type to a few filetypes.
 * doc/geany.txt, doc/geany.html:
   Fix a few typos.


2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/symbols.c:
   Fix updating symbol list for overloaded C++ symbols (closes
   #3406644).


2011-09-02  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/ui_utils.c:
   Fix check for enabling MIME type based icons.
 * src/encodings.c, src/filetypes.c:
   Plug a few memory leaks.


2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/utils.h:
   Fix foreach_ptr_array() not to crash on arrays with 0 elements.


2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/filetypes.c, src/filetypes.h, doc/geany.txt,
   doc/geany.html, data/filetypes.*:
   Add support for filetype-specific indentation settings (closes
   #3339420 and #3390435).
 * src/callbacks.c, src/editor.c, src/editor.h:
   Add editor_set_indent_width() to only set indentation width.
 * src/callbacks.c, src/callbacks.h, src/document.c, src/document.h,
   src/interface.c, geany.glade:
   Add menu items to detect indentation settings from document's
   content.


2011-08-24  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/editor.c: